--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@
 
 body {
     font-family: sans-serif;
+    background-color: var(--bggray);
 }
 
 /* nav */
@@ -75,4 +76,24 @@ header nav ul li a {
     background-color: var(--mainblue);
     font-size: 33px;
     padding: 10px 10px;
+}
+
+/* About me style */
+.about-me {
+    color: var(--textblue);
+    display: flex;
+    justify-content: center;
+    margin: 40px 0;
+    padding: 0 80px 0 120px
+}
+.about-me h3{
+    font-size: 40px;
+    padding-right: 20px;
+    text-align: right;
+}
+.about-me div {
+    font-size: 18px;
+    border-left: 4px solid var(--textblue);
+    line-height: 1.5;
+    padding-left: 30px;
 }
