--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,22 +78,79 @@ header nav ul li a {
     padding: 10px 10px;
 }
 
+/* General styling for below */
+.section-head {
+    font-size: 40px;
+    padding-right: 20px;
+    text-align: right;
+    color: var(--textblue);
+}
+.section-border {
+    padding-left: 30px;
+    border-left: 4px solid var(--textblue);
+}
+
 /* About me style */
 .about-me {
+    display: flex;
+    justify-content: center;
+    margin: 40px 0;
+    padding: 0 80px 0 103px
+}
+.about-me div {
+    font-size: 18px;
+    line-height: 1.5;
     color: var(--textblue);
+    
+}
+
+/* work style */
+.work {
     display: flex;
     justify-content: center;
     margin: 40px 0;
     padding: 0 80px 0 120px
 }
-.about-me h3{
-    font-size: 40px;
-    padding-right: 20px;
-    text-align: right;
+.work-grid-wrapper {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    
 }
-.about-me div {
-    font-size: 18px;
-    border-left: 4px solid var(--textblue);
-    line-height: 1.5;
-    padding-left: 30px;
+.work-grid-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    width: 100%;
+    grid-gap: 5px;
+    height: 600px;
+}
+.work-grid-container img {
+    object-fit: fill;
+    height: 100%;
+    width: 100%;
+}
+.work-grid-container a {
+    width: 100%;
+    height: 100%;
+}
+.work-grid-item {
+    padding: 0px;
+    border: 4px solid var(--mainblue);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+.work-1 {
+    grid-column: 1/ span 2;
+    grid-row: 1/ span 2;
+}
+
+/* contact styling */
+.about-me {
+    display: flex;
+    justify-content: center;
+    margin: 40px 0;
+    padding: 0 80px 0 103px
 }
