--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,9 +148,26 @@ header nav ul li a {
 }
 
 /* contact styling */
-.about-me {
+.contact-me {
     display: flex;
     justify-content: center;
     margin: 40px 0;
-    padding: 0 80px 0 103px
+    padding: 0 80px 0 120px;
+    width: 100%;
+    padding-left: 53px;
+}
+
+.contact-me ul {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+}
+.contact-me ul li a {
+    color: var(--textblue);
+    text-decoration: none;
+    font-size: 20px;
+    border-bottom: 4px solid var(--textblue);
+    width: 100%;
 }
