--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,4 +170,44 @@ header nav ul li a {
     font-size: 20px;
     border-bottom: 4px solid var(--textblue);
     width: 100%;
+    font-weight: bold;
+}
+
+@media screen and (max-width: 768px) {
+    .section-head {
+        text-align: center;
+        padding-right: 0;
+        padding-top: 10px;
+    }
+    .section-border {
+        border-left: none;
+        border-top: 4px solid var(--textblue);
+        padding-left: 0;
+        padding-top: 20px;
+    }
+    header nav {
+         align-content: center;
+         display: flex;
+         justify-content: center;
+    }    
+    header nav ul li a {
+        font-size: 1.8vw;
+    }
+    .contact-me {
+        display: block;
+    }
+    .work {
+        display: block;
+    }
+    .about-me {
+        display: block;
+        padding-left: 80px;
+    }
+    .work-grid-wrapper {
+        padding-left: 0;
+    }
+    .work {
+        padding: 0 5%;
+    }
+
 }
